20190331 spring boot 权限使用@RequiredPermissions注解

--- a/src/main/resources/templates/management/main.html
+++ b/src/main/resources/templates/management/main.html
@@ -30,7 +30,7 @@
             <h1>智能商贸系统</h1>
         </div>
         <div class="fr">
-            欢迎您，<span>用户</span>&nbsp;<a href="#">注销</a>
+            欢迎您，<span>用户</span>&nbsp;<a th:href="@{/management/account/logout}">注销</a>
         </div>
     </div>
     <div data-options="region:'south'" style="overflow: hidden;height: 30px;">
